# LCGMulXorPRNG

./: README.md
src/bash/: exec_tests.sh
src/cpp/: .gitignore  CMakeLists.txt  Doxyfile  PRNG.h  main.cpp
src/cpp/include/: PRNG_constants.h  RandomNumberDevice.h  StateMachine.h  sha256.h
src/cpp/src/: RandomNumberDevice.cpp  StateMachine.cpp  main.cpp  sha256.cpp
src/cs/prng/: EntryPoint.cs  RandomNumberDevice.cs  StateMachine.cs
src/java/prng/: pom.xml
src/java/prng/src/main/java/ovh/ziko/: App.java  RandomNumberDevice.java  StateMachine.java
src/java/prng/src/test/java/ovh/ziko/: AppTest.java
src/python/: check_generated_saved_files.py  main.py  prng.py
src/rust/prng/: Cargo.toml
src/rust/prng/src/: lib.rs  main.rs  prng.rs  utils_ptr.rs  utils_vec_join.rs  vec_own.rs
